Fix bad contrast on disabled menu items

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2848,7 +2848,7 @@ a.account__display-name {
     cursor: default;
 
     &:focus {
-      color: rgb(from var(--color-text-disabled) r g b / 70%);
+      color: var(--color-text-on-disabled);
       background: var(--color-bg-disabled);
       outline: 0;
     }
